<resources>
    <string name="app_name">RunTracker</string>
    <string name="started">开始：</string>
    <string name="latitude">纬度：</string>
    <string name="longitude">精度：</string>
    <string name="altitude">高度：</string>
    <string name="elapsed_time">用时：</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="gps_enabled">gps可用</string>
    <string name="gps_disabled">gps不可用</string>
    <string name="cell_text">Run at %1s</string>
    <string name="new_run">新的路程</string>
    <string name="notify_track_ticker">track ticker</string>
    <string name="notify_track_content_title">track content title</string>
    <string name="notify_track_content_text">track content text</string>
    <string name="title_activity_maps">Map</string>
    <string name="run_map">地图</string>
    <string name="run_start">定位开始</string>
    <string name="run_start_at_format">Run start at %s</string>
    <string name="run_finish">定位结束</string>
    <string name="run_finish_at_format">Run finished at %s</string>
</resources>
