<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/started"/>

        <TextView
            android:id="@+id/start_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="start"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/latitude"/>

        <TextView
            android:id="@+id/latitude_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="latitude"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/longitude"/>

        <TextView
            android:id="@+id/longitude_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="longitude"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/altitude"/>

        <TextView
            android:id="@+id/altitude_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="altitude"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/elapsed_time"/>

        <TextView
            android:id="@+id/elapsed_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text="elapsed time"/>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/start_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"/>

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"/>
    </TableRow>
</TableLayout>